--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "fastify": "~2.3.0",
     "husky": "~2.1.0",
     "prettier": "~1.17.0",
+    "request": "~2.88.0",
     "rimraf": "~2.6.3",
     "tap": "~13.1.2",
     "tap-mocha-reporter": "~4.0.1",
